--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         }
         body{
             background-color: #fff;
+            font-family: Cairo;
+            font-family: 'Cairo';
         }        
         body nav{
             height: 60px;
@@ -88,13 +90,15 @@
         }
         .box h1{
             font-size: 17px;
-            font-family:cairo;
+            font-family: Cairo;
+            font-family: 'Cairo';
             color:rgb(82, 165, 217);
             line-height: 23px;
         }
         .box p{
             font-size: 70%;
-            font-family: cairo;
+            font-family: Cairo;
+            font-family: 'Cairo';
             opacity:0.7;
         }
         .box img{
@@ -131,7 +135,8 @@
            border-bottom:1px solid rgb(39, 120, 170);
            width: 35%;
            margin-bottom: 10px;
-            
+            font-family: Cairo;
+            font-family: 'Cairo';
            
        }
        .last .para{
@@ -159,12 +164,16 @@
            color: #fff;
            font-family: cairo;
            font-size: 80%;
+           font-family: Cairo;
+            font-family: 'Cairo';
        }
        footer h3{
            color: #fff;
            font-size: 80%;
            text-align: center;
            font-family: cairo;
+           font-family: Cairo;
+            font-family: 'Cairo';
        }
     </style>
 </head>
